# oz-account-policy-builder

./: .gitignore  Cargo.toml  README.md  _build_output.txt  _commit.ps1  _git_push.ps1  blend-capital-blend-contract-sdk.txt  kalepail-superpeach.txt  soroswap-aggregator.txt  soroswap-core.txt
.kiro/settings/: mcp.json
apps/mcp-server/: .dev.vars.example  package-lock.json  package.json  worker-configuration.d.ts  wrangler-simple.jsonc  wrangler.jsonc
apps/mcp-server/src/: index.ts  stdio.ts  types.ts
apps/mcp-server/src/pipeline/: clarification.ts  emitter.ts  harness.ts  index.ts  manifest.ts  primitives.ts  recorder.ts  synthesizer.ts  test.ts
apps/mcp-server/src/tools/: database-tools-sentry.ts  policy-tools.ts  register-tools.ts
apps/mcp-server/tests/unit/tools/: record-transaction-failed.test.ts
apps/mcp-server/tests/unit/utils/: response-helpers.test.ts
contracts/blend-contract-sdk/: .gitignore  Cargo.toml  LICENSE  README.md
contracts/blend-contract-sdk/src/: testutils.rs
contracts/blend_yield_claim/: Cargo.toml
contracts/blend_yield_claim/src/: lib.rs
contracts/core/: Cargo.toml
contracts/core/src/harness/: mutations.rs
contracts/core/src/recorder/: mod.rs
contracts/core/src/synthesizer/: generator.rs  policy_spec.rs
contracts/policies/allowlist/: Cargo.toml
contracts/policies/allowlist/src/: lib.rs
contracts/policies/allowlist/tests/: integration.rs
contracts/policies/composite/: Cargo.toml
contracts/policies/composite/src/: lib.rs
contracts/policies/composite/tests/: integration.rs
contracts/policies/frequency-limit/: Cargo.toml
contracts/policies/frequency-limit/src/: lib.rs
contracts/policies/frequency-limit/tests/: integration.rs
contracts/policies/spending-limit/: Cargo.toml
contracts/policies/spending-limit/src/: lib.rs
contracts/policies/spending-limit/tests/: integration.rs
contracts/policies/time-window/: Cargo.toml
contracts/policies/time-window/src/: lib.rs
contracts/policies/time-window/tests/: integration.rs
contracts/policy-primitives/: Cargo.toml
contracts/policy-primitives/src/: lib.rs
contracts/protocol-adapters/blend/: Cargo.toml
contracts/protocol-adapters/blend/src/: lib.rs
contracts/protocol-adapters/sep41/: Cargo.toml
contracts/protocol-adapters/sep41/src/: lib.rs
contracts/protocol-adapters/soroswap/: Cargo.toml
contracts/protocol-adapters/soroswap/src/: lib.rs
contracts/sep41_subscription/: Cargo.toml
contracts/sep41_subscription/src/: lib.rs
contracts/simulation-harness/: Cargo.toml
contracts/simulation-harness/src/: lib.rs
contracts/soroswap-core/: README.md
contracts/soroswap_bounded_swap/: Cargo.toml
contracts/soroswap_bounded_swap/src/: lib.rs
docs/: PRD.md  TECHNICAL_ARCHITECTURE.md
