[workspace]
resolver = "2"
members = [
    "packages/core",
]

[workspace.dependencies]
# Soroban SDK — pinned to match stellar-accounts 0.7.1
soroban-sdk      = { version = "22.0.11" }
stellar-xdr      = { version = "22.1.0", features = ["curr"] }

# OZ accounts framework — the Policy trait lives here
stellar-accounts = { version = "0.7.1" }

# Core library deps
serde            = { version = "1.0", features = ["derive"] }
serde_json       = "1.0"
thiserror        = "1.0"
hex              = "0.4"
base64           = "0.22"

# Testing only
proptest         = "1.4"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
