[workspace]
resolver = "2"
members = [
    "contracts/core",
    "contracts/policy-primitives",
    "contracts/policies/spending-limit",
    "contracts/policies/time-window",
    "contracts/policies/frequency-limit",
    "contracts/policies/allowlist",
    "contracts/policies/composite",
    # Temporarily disabled due to dependency issues
    # "contracts/protocol-adapters/blend",
    # "contracts/protocol-adapters/soroswap",
    # "contracts/protocol-adapters/sep41",
    "contracts/simulation-harness",
]

[workspace.dependencies]
# Soroban SDK — latest stable version
soroban-sdk      = { version = "26.1.0" }
stellar-xdr      = { version = "27.0.0" }

# OZ accounts framework — the Policy trait lives here
stellar-accounts = { version = "0.7.2" }

# Policy primitives base crate
policy-primitives = { path = "contracts/policy-primitives" }

# Core library deps
serde            = { version = "1.0", features = ["derive"] }
serde_json       = "1.0"
thiserror        = "1.0"
hex              = "0.4"
base64           = "0.22"

# Testing only
proptest         = "1.4"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
