[package]
name = "policy-primitives"
version = "0.1.0"
edition = "2021"
description = "Base primitives and traits for OpenZeppelin smart account policies"
license = "MIT"
readme = "README.md"

[lib]
crate-type = ["rlib"]

[dependencies]
soroban-sdk = { workspace = true }
stellar-accounts = { workspace = true }

[dev-dependencies]
soroban-sdk = { version = "=22.0.0", features = ["testutils"] }
stellar-accounts = { workspace = true }
