[package]
name = "sep41-subscription"
version = "0.1.0"
edition = "2021"
description = "SEP-41 subscription policy — recurring payment enforcement"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk      = { workspace = true }
stellar-accounts = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
