[package]
name = "allowlist"
version = "0.1.0"
edition = "2021"
description = "Allowlist policy for OpenZeppelin smart accounts"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
stellar-accounts = { workspace = true }
policy-primitives = { workspace = true }

[dev-dependencies]
soroban-sdk = { version = "=22.0.0", features = ["testutils"] }
stellar-accounts = { workspace = true }
