[package]
name = "blend-adapter"
version = "0.1.0"
edition = "2021"
description = "Blend protocol adapter for policy contracts"
license = "MIT"

[lib]
crate-type = ["rlib"]

[dependencies]
soroban-sdk = { workspace = true }

# Note: blend-contract-sdk is in ../blend-contract-sdk directory
blend-contract-sdk = { path = "../../blend-contract-sdk" }

[dev-dependencies]
soroban-sdk = { version = "=22.0.0", features = ["testutils"] }
