[package]
name = "sep41-adapter"
version = "0.1.0"
edition = "2021"
description = "SEP-41 token standard adapter for policy contracts"
license = "MIT"

[lib]
crate-type = ["rlib"]

[dependencies]
soroban-sdk = { workspace = true }
stellar-accounts = { workspace = true }

[dev-dependencies]
soroban-sdk = { version = "=22.0.0", features = ["testutils"] }
